--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ paginate: 5
 repo: starter
 github_org: maptime
 maptime:
-  chapter: Meetup name
-  twitter: YourName
+  chapter: MaptimeTurku
+  twitter: https://twitter.com/MaptimeTurku
   #disqus: YOUR DISQUS USERNAME
