--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ repo: starter
 github_org: maptime
 maptime:
   chapter: MaptimeTurku
-  twitter: https://twitter.com/MaptimeTurku
+  twitter: MaptimeTurku
   #disqus: YOUR DISQUS USERNAME
