update repo name in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ baseurl: /turku
 permalink: pretty
 markdown: kramdown
 paginate: 5
-repo: starter
+repo: turku
 github_org: maptime
 maptime:
   chapter: MaptimeTurku
